# agency-2026

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: package_agents.py  pyproject.toml  server.py
backend/discovery_agent/: handler.py  pyproject.toml
backend/investigation_agent/: handler.py  pyproject.toml
backend/narrative_agent/: handler.py  pyproject.toml
backend/orchestrator/: handler.py  pyproject.toml
backend/scan_scheduler/: handler.py  pyproject.toml
backend/scheduler/: handler.py  pyproject.toml
backend/validator_agent/: handler.py  pyproject.toml
backend/vendor_concentration_agent/: __init__.py  _jsonutil.py  dashboards.py  final_brief.py  lambda_runtime.py  orchestrator.py  pipeline.py  router.py
backend/vendor_concentration_agent/agents/: __init__.py  _base.py  discovery.py  investigation.py  narrative.py  router.py  validator.py
backend/vendor_concentration_agent/data/: __init__.py  datasets.py  postgres.py
backend/vendor_concentration_agent/math/: __init__.py  concentration.py  crosscheck.py  explainers.py  procurement.py  types.py
backend/vendor_concentration_agent/prompts/: discovery.md  investigation.md  narrative.md  router.md  validator.md
backend/vendor_concentration_agent/tools/: __init__.py  _wrap.py  concentration.py  crosscheck.py  procurement.py
backend/vendor_concentration_agent/trace/: __init__.py  events.py
backend/vendor_concentration_agent/validation/: __init__.py  gates.py
docs/: architecture.md  judges-context.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/__tests__/: api.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/departments/: page.tsx
frontend/app/vendors/: page.tsx
frontend/components/chat/: ChatDrawer.tsx  ResultCard.tsx
frontend/components/dashboard/: ConcentrationChart.tsx  ConcentrationMethodology.tsx  ConcentrationScatterChart.tsx  ConcentrationTrendChart.tsx  MetricsSummary.tsx  SourceBadge.tsx  SpendOverTimeChart.tsx  ThresholdDistributionChart.tsx  TopVendorsChart.tsx  VendorCompetitionChart.tsx  VendorDominanceChart.tsx
frontend/components/layout/: GithubBadge.tsx  Navbar.tsx  NotificationDetailModal.tsx  NotificationsBell.tsx  Sidebar.tsx
frontend/components/ui/: chart.tsx  sheet.tsx
frontend/lib/: api.ts  types.ts
references/: references.json
references/excerpts/: doj_hhi.txt  worldbank_gini.txt
terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
