[project]
name = "vendor-agent-narrative"
version = "0.1.0"
description = "Narrative specialist Lambda"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40",
    "python-dotenv>=1.0",
    "strands-agents>=1.37",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
