[project]
name = "vendor-agent-validator"
version = "0.1.0"
description = "Validator specialist Lambda"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40",
    "python-dotenv>=1.0",
    "strands-agents>=1.37",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
